# lambda-instance-finder-script

./: .gitignore  main.py  pyproject.toml
sample_package/: __main__.py
